nav-left fix of navBar template and gap , font -size increase

--- a/styles.css
+++ b/styles.css
@@ -724,7 +724,8 @@ main {
 }
 .testi .aside > p {
   position: relative;
-  font-size: 14px;
+/* increase font size description */
+  font-size: 17px;
   line-height: normal;
   margin-bottom: 30px;
 
@@ -751,7 +752,8 @@ main {
 .testi .aside .name {
   position: relative;
   width: fit-content;
-  line-height: 1;
+  /* make gap between name and profession */
+  line-height: 2;
 }
 .testi .aside .name h4 {
   font-size: 22px;
@@ -760,7 +762,8 @@ main {
   opacity: .8;
 }
 .testi .aside .name p {
-  font-size: 12px;
+  /* increase font size */
+  font-size: 15px;
   text-align: right;
 }
 .testi :is(.swiper-button-next, .swiper-button-prev){
